fix TONBase64 & TONUserFriendlyAddress

--- a/Scripts/generate-api/templates/data_class.mustache
+++ b/Scripts/generate-api/templates/data_class.mustache
@@ -7,6 +7,8 @@
 import kotlinx.serialization.Serializable
 import kotlinx.serialization.SerialName
 import kotlinx.serialization.Contextual
+import io.ton.walletkit.model.TONBase64
+import io.ton.walletkit.model.TONUserFriendlyAddress
 {{#enumUnknownDefaultCase}}
 import kotlinx.serialization.KSerializer
 import kotlinx.serialization.Serializer
