--- a/Scripts/generate-api/templates/modelDiscriminatedUnion.mustache
+++ b/Scripts/generate-api/templates/modelDiscriminatedUnion.mustache
@@ -25,6 +25,8 @@ import kotlinx.serialization.json.jsonObject
 import kotlinx.serialization.json.jsonPrimitive
 import kotlinx.serialization.json.contentOrNull
 import kotlinx.serialization.serializer
+import io.ton.walletkit.model.TONBase64
+import io.ton.walletkit.model.TONUserFriendlyAddress
 
 /**
  * {{{description}}}
